@@ -89,6 +89,7 @@ FileBinaryOutputPort.h         FileBinaryOutputPort.cpp            \
 BufferedFileBinaryOutputPort.h BufferedFileBinaryOutputPort.cpp    \
 CustomBinaryInputPort.h        CustomBinaryInputPort.cpp           \
 CustomTextualInputPort.h       CustomTextualInputPort.cpp          \
+CustomTextualOutputPort.h      CustomTextualOutputPort.cpp         \
 CustomBinaryInputOutputPort.h  CustomBinaryInputOutputPort.cpp     \
 TextualOutputPort.h            TextualOutputPort.cpp               \
 TextualByteVectorOutputPort.h  TextualByteVectorOutputPort.cpp     \
