@@ -72,7 +72,7 @@ void TextualByteVectorOutputPort::flush()
 
 ucs4string TextualByteVectorOutputPort::toString()
 {
-    return UC("<textual bytevector output port>");
+    return UC("<textual-bytevector-output-port>");
 }
 
 Transcoder* TextualByteVectorOutputPort::transcoder() const
